--- a/lectures/autocorr.qmd
+++ b/lectures/autocorr.qmd
@@ -746,7 +746,7 @@ dat_list <- list(
 ```
 
 # No Correlation
-```{r, eval = FALSE}
+```{r, eval = FALSE, echo = TRUE}
 no_phylo <- ulam(
     alist(
         #likelihood
@@ -796,7 +796,7 @@ image(dat_list$R)
 ```
 
 # Brownian Correlation
-```{r, eval = FALSE}
+```{r,  eval = FALSE, echo = TRUE}
 brownian <- ulam(
     alist(
         #likelihood
@@ -822,7 +822,7 @@ load(file="./data/gp/brownian.Rdata")
 
 
 # No Correlation
-```{r, eval = FALSE}
+```{r, eval = FALSE, echo = TRUE}
 # add scaled and reordered distance matrix
 dat_list$Dmat <- Dmat[ spp_obs , spp_obs ] / max(Dmat)
 
@@ -860,7 +860,7 @@ NOTE: Does not currently work due to working with matrices. Standby!
 
 # Comparing G
 
-```{r, coef_compare, eval = FALSE}
+```{r, coef_compare, eval = TRUE}
 out <- rbind(
   precis(no_phylo, pars = "bG"),
   precis(brownian, pars = "bG"),
